--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <title>Samuel Kelechi PortFolio</title>
     <!--meta tags -->
     <meta charset="UTF-8">
+    <link rel="icon" href="%PUBLIC_URL%/logo123.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Apex Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-           Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
+    <meta name="keywords" content="Samuel Kelechi Responsive PortFolio Web Page"
     />
+    <meta name="description" content="Samuel Kelechi Personal PortFolio" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo123.png" />
+    
     <script>
       addEventListener("load", function () {
         setTimeout(hideURLbar, 0);
