added whatsapp chat

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <title>Samuel Kelechi PortFolio</title>
     <!--meta tags -->
     <meta charset="UTF-8">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="icon" href="%PUBLIC_URL%/logo123.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Samuel Kelechi Responsive PortFolio Web Page"
